smart_pointer/bat
   Compiling smart_pointer v0.1.0 (/Users/kyungsubkim/Programming/rust/rustBook/smart_pointer)
error[E0425]: cannot find function, tuple struct or tuple variant `Cons` in this scope
 --> src/main.rs:9:16
  |
9 |     let list = Cons(1, Cons(2, Cons(3, Nil)));
  |                ^^^^ not found in this scope
  |
help: consider importing this tuple variant
  |
2 + use crate::List::Cons;
  |

error[E0425]: cannot find function, tuple struct or tuple variant `Cons` in this scope
 --> src/main.rs:9:24
  |
9 |     let list = Cons(1, Cons(2, Cons(3, Nil)));
  |                        ^^^^ not found in this scope
  |
help: consider importing this tuple variant
  |
2 + use crate::List::Cons;
  |

error[E0425]: cannot find function, tuple struct or tuple variant `Cons` in this scope
 --> src/main.rs:9:32
  |
9 |     let list = Cons(1, Cons(2, Cons(3, Nil)));
  |                                ^^^^ not found in this scope
  |
help: consider importing this tuple variant
  |
2 + use crate::List::Cons;
  |

error[E0425]: cannot find value `Nil` in this scope
 --> src/main.rs:9:40
  |
9 |     let list = Cons(1, Cons(2, Cons(3, Nil)));
  |                                        ^^^ not found in this scope
  |
help: consider importing this unit variant
  |
2 + use crate::List::Nil;
  |

error[E0072]: recursive type `List` has infinite size
 --> src/main.rs:2:1
  |
2 | enum List {
  | ^^^^^^^^^
3 |     Cons(i32, List),
  |               ---- recursive without indirection
  |
help: insert some indirection (e.g., a `Box`, `Rc`, or `&`) to break the cycle
  |
3 |     Cons(i32, Box<List>),
  |               ++++    +

Some errors have detailed explanations: E0072, E0425.
For more information about an error, try `rustc --explain E0072`.
error: could not compile `smart_pointer` (bin "smart_pointer") due to 5 previous errors
